--- a/post29/src/main/res/values/strings.xml
+++ b/post29/src/main/res/values/strings.xml
@@ -3,16 +3,26 @@
 
     <!-- fragment labels -->
     <string name="identifiers_fragment_label">Identifiers and Data</string>
+    <string name="privacy_changes_label">Top Privacy Changes</string>
 
     <!-- button labels -->
+    <string name="access_external_storage_button">Access External Storage</string>
     <string name="get_contacts_button">Get contacts</string>
+    <string name="give_permission">Give permission</string>
+    <string name="go_to_next_screen">Go to next Screen</string>
+    <string name="take_photo">Take Photo</string>
 
     <!-- field labels -->
     <string name="build_serial">Build Serial</string>
     <string name="connection_owner_uid">Connection owners unique identifier</string>
+    <string name="media_block">Photos created by your app</string>
 
     <!-- error -->
     <string name="error_build_serial_not_available">Build Serial only available for system apps on Android 10+</string>
     <string name="error_build_serial_not_implemented">Build Serial only available after Android Oreo</string>
     <string name="error_get_uid_not_available">getConnectionOwnerUid not implemented on Android 9 and lower</string>
+
+    <!-- hints -->
+    <string name="access_external_storage_hint">Text from the file in external storage will be here after you press the button.</string>
+    <string name="access_private_media_hint">On devices with Android 9 or lower you have to give a permission to read app media files since scoped storage was not really a thing</string>
 </resources>
