--- a/post29/src/main/res/values/strings.xml
+++ b/post29/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <!-- fragment labels -->
     <string name="identifiers_fragment_label">Identifiers and Data</string>
+    <string name="ndk_label">NDK Changes</string>
     <string name="privacy_changes_label">Top Privacy Changes</string>
 
     <!-- button labels -->
@@ -17,6 +18,7 @@
     <string name="build_serial">Build Serial</string>
     <string name="connection_owner_uid">Connection owners unique identifier</string>
     <string name="media_block">Photos created by your app</string>
+    <string name="ndk_text_relocation_title">NDK text relocations have been disabled in Android 10</string>
 
     <!-- error -->
     <string name="error_build_serial_not_available">Build Serial only available for system apps on Android 10+</string>
@@ -28,4 +30,8 @@
     <string name="access_private_media_hint">On devices with Android 9 or lower you have to give a permission to read app media files since scoped storage was not really a thing</string>
     <string name="location_permission_needed_hint">Since Android 10, you will be requested a separate permission for background location</string>
     <string name="location_permission_not_needed_hint">You shouldn\'t see any permission requests</string>
+    <string name="ndk_bionic_literal_hint">Bionic libraries use literal paths</string>
+    <string name="ndk_bionic_symbolic_hint">Bionic libraries use symbolic links as paths</string>
+    <string name="ndk_system_binaries_executable">Binaries are in execute-only memory now</string>
+    <string name="ndk_system_binaries_read">You can read executable binary files content</string>
 </resources>
